# SmartWCHR

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.dc.yml  docker-compose.wc.yml  docker-compose.yml  frames_2024-07-10_15.28.19.gv  makefile
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
.devcontainer/source/: Dockerfile.base  Dockerfile.dev  Dockerfile.tt  entrypoint.sh  ros2init.sh  ros_entrypoint.sh  ros_shell.sh
scripts/: Dockerfile.base  docker-compose.dc.yml  entrypoint.sh  ros2-humble-init.sh  udev_init.sh
scripts/rules/: 200-encoder_usb.rules  220-driver-control.rules  220-xfspeech.rules  99-realsense-d4xx-mipi-dfu.rules
source/: Dockerfile.dev
src/driver/: 220-driver-control.rules  encoder_usb.rules  setup.py
src/driver/driver/: GuoKangodomCalculator.py  OdomCalculator.py  controller.py  guokang_controller.py  odomCalculator.py
src/driver/launch/: driver.py
src/gesture_recognition/: package.xml  setup.py
src/gesture_recognition/gesture_recognition/: gesture_recognition_node.py
src/guide_nav2/: CMakeLists.txt  package.xml
src/guide_nav2/config/: amcl.yaml  behavior.xml  guide_nav2.lua  recoveries_server.yaml
src/guide_nav2/launch/: frames.gv  guide_nav2.launch.py  terminal_log.txt
src/guide_nav2/maps/: map-0619.yaml  slam_2d_map.pgm
src/imu/: imu_usb.rules  setup.py
src/imu/imu/: imu.py
src/imu/launch/: imu.py  start.py
src/joy_ctrl/: setup.py
src/joy_ctrl/joy_ctrl/: wc_ctrl.py
src/joy_ctrl/launch/: driver_ctrl_joy_launch.py  joy_ctrl.py  keyboart_ctrl_launch-Copy1.py  yahboomcar_joy_launch.py
src/lidar/: CMakeLists.txt  README.md  package.xml
src/lidar/launch/: scan.py  scan_and_view.py  scan_gmapping.py  scan_view.py  slam_2d.py  view.py
src/lidar/map/: slam_2d_map2.yaml
src/lidar/rviz2/: scan.rviz
src/lidar/sdk/core/base/: utils.h
src/lidar/sdk/core/serial/impl/unix/: list_ports_linux.cpp
src/lidar/src/: scan_node.cpp
src/lslidar_ros/: README.md
src/nav2/: CMakeLists.txt  package.xml
src/nav2/config/: amcl.yaml  behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  guide.yaml  nav2.lua  nav2.rviz  planner_server.yaml  recoveries_server.yaml
src/nav2/launch/: nav2.launch.py  test.py
src/nav2/maps/: map_test.pgm  map_test1.yaml  map_test2.pbstream
src/nav2_sample/: setup.py
src/nav2_sample/launch/: main_launch.py  unique_multi_tb3_simulation_launch.py  wc_base.py  wc_sim_launch.py
src/nav2_sample/maps/: fx_10_gk.pgm  fx_floor10.yaml  if_3.pgm  if_building_1.pgm  if_building_1.yaml  if_building_2.yaml
src/nav2_sample/params/: nav2_params.yaml
src/nav2_sample/rviz/: nav2_default_view.rviz
src/nav2_sample/urdf/: wheelchair_base.urdf
src/oradar_lidar/: CMakeLists.txt  README.md
src/oradar_lidar/launch/: ms200_scan.launch  ms200_scan.launch.py  ms200_scan_gmapping.launch.py
src/oradar_lidar/map/: slam_2d_map.yaml
src/oradar_ros/: oradar.rules
src/oradar_ros/launch/: ms200_scan_view.launch  ms200_scan_view.launch.py  slam_2d.launch.py
src/ros_local/: setup.py
src/ros_local/config/: ekf.yaml
src/ros_local/launch/: localization.py
src/s2_laser/: package.xml  setup.cfg  setup.py
src/s2_laser/launch/: laser_Avoidance_a1_X3.launch.py  laser_Tracker_a1_X3.launch.py  laser_Warning_a1_X3.launch.py
src/s2_laser/s2_laser/: common.py  laser_Avoidance_4ROS.py  laser_Avoidance_a1_R2-Copy1.py  laser_Avoidance_a1_X3.py  laser_Tracker_4ROS_R2.py
src/slam_2d/: package.xml  setup.cfg  setup.py
src/slam_2d/config/: pure2d.lua  pure2d.rviz  slam2d.lua  slam2d.rviz  slam_2d.lua
src/slam_2d/launch/: 2d.py  all.py  pure2d.py  slam2d.py  (+2 more)
src/slam_2d_launch_all/: package.xml  setup.cfg  setup.py
src/smc_perception/gesture_recognition/gesture_recognition/: package.xml  setup.py
src/swc_nav_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/swc_perception/following_controller/: package.xml  setup.cfg  setup.py
src/swc_perception/following_controller/following_controller/: following_controller_node.py  following_nav2.py  following_ros.py  following_vis.py  tf_convert_demo.py
src/swc_perception/pcl_filter/: CMakeLists.txt  package.xml
src/swc_perception/pcl_filter/include/pcl_filter/: pointcloud_node.hpp
src/swc_perception/pcl_filter/src/: main.cpp  pointcloud_node.cpp
src/swc_perception/person_following/body_tracking/: CHANGELOG.md  CMakeLists.txt  package.xml
src/swc_perception/person_following/body_tracking/include/: body_tracking.h  common.h  context.hpp  message_sync_node.h  param_node.h  robot_ctrl_node.h  sync_subscriber_node.h  time_helper.h  tracklet.hpp  util.h
src/swc_perception/person_following/body_tracking/launch/: body_tracking.launch.py  body_tracking_without_gesture.launch.py  body_tracking_without_input_node.launch.py
src/swc_perception/person_following/body_tracking/src/: body_tracking.cpp  context.cpp  main.cpp  util.cpp
src/swc_perception/person_following/ccf_person_identification/: CMakeLists.txt  package.xml
src/swc_perception/person_following/ccf_person_identification/include/ccf_person_identification/: person_classifier.hpp
src/swc_perception/person_following/ccf_person_identification/include/ccf_person_identification/body/: body_classifier.hpp  cnn_channel_extractor.hpp
src/swc_perception/person_following/ccf_person_identification/include/kkl/cvk/: icf_channel_bank.hpp  icf_channel_extractor.hpp
src/swc_perception/person_following/ccf_person_identification/src/: ccf_person_identification_test.cpp
src/swc_perception/person_following/video_pub/: package.xml  setup.cfg  setup.py
src/swc_perception/person_following/video_pub/video_pub/: hello_world_publisher.py  video_pub_node.py
src/swcmain/: package.xml  setup.cfg  setup.py
src/system_controller/: package.xml  setup.cfg  setup.py
src/wcmain/: package.xml  setup.cfg  setup.py
src/wcmodel/: package.xml  setup.cfg  setup.py
src/wheelchair_description/: package.xml  setup.cfg  setup.py
src/wit_ros2_imu/: bind_usb.sh  imu_usb.rules  package.xml  setup.cfg  setup.py
src/yahboomcar_nav/: package.xml  setup.cfg  setup.py
(+424 files in other folders)
